# compiler_lab

./: .gitignore  CMakeLists.txt  README.md
src/: dependency.cpp  dependency.h  main.cpp
src/helper/: Symbol.h  TokenizeHelper.cpp  TokenizeHelper.h  Utils.cpp  Utils.h
src/helper/structs/: Node.cpp  Node.h  Token.cpp  Token.h  TokenizeAttempt.cpp  TokenizeAttempt.h
src/lexer/: Lexer.cpp  Lexer.h  LexerHelper.cpp  LexerHelper.h  TokenizeHelper.cpp  TokenizeHelper.h  Tokenizer.cpp  Tokenizer.h  lexer.cpp  token_dictionary.cpp
src/parser/: Parser.cpp  Parser.h  ParserRunner.cpp  ParserRunner.h  parser_test.cpp  parser_test.h
test/lexer/: test_1.c  test_parser1.c  test_parser2.c  test_rekursive_funktion.c  test_rekursive_funktion_no_expr.c  test_unfinished_multiline_comment.c
test/parser/: test.c  test_rekursive_funktion.c
